# Polaris

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  AUDIT_REPORT.md  CONTRACTS.md  Cargo.toml  DEPLOYMENT.md  INDEXER_SETUP.md  LOCAL_SETUP.md  ORACLE_SETUP.md  PRD.md  README.md  ROADMAP.md  SDK_USAGE.md  SECURITY.md  TESTNET_SETUP.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
apps/web/: next.config.js  package.json
backend/api/: package.json  tsconfig.json
backend/indexer/: package.json
contracts/: Makefile  README.md
contracts/market/: Cargo.toml
contracts/market-factory/: Cargo.toml
contracts/oracle/: Cargo.toml
contracts/settlement/: Cargo.toml
contracts/shared/: Cargo.toml
contracts/token/: Cargo.toml
contracts/treasury/: Cargo.toml
deployments/: testnet.json
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CONTRACTS.md  CONTRACT_ADDRESSES.md  DEPLOYMENT.md  INDEXER_SETUP.md  LOCAL_SETUP.md  ROADMAP.md  TESTNET_SETUP.md  USER_FEEDBACK.md
frontend/: .env.local.example  .eslintrc.json  instrumentation-client.ts  instrumentation.ts  next.config.js  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/hooks/: use-market.ts  use-portfolio.ts  use-wallet.ts
frontend/lib/: analytics.ts  contract.ts  mock-data.ts  (+1 more)
scripts/: bootstrap-testnet.sh  check-tokens.ts  create-test-markets.sh  seed-liquidity.sh  verify-deployment.sh  verify-fe-buy.ts  verify-fe-read.ts
(+76 files in other folders)
