[workspace]
members = [
    "contracts/market-factory",
    "contracts/market",
    "contracts/amm",
    "contracts/oracle",
    "contracts/settlement",
    "contracts/token",
    "contracts/treasury",
    "contracts/shared",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
